# AOC

./: .gitignore  Jenkinsfile
2022/02/: main.nim
nim/01/: main.nim
nim/02/: main.nim
nim/03/: main.nim  rucksack.nim
nim/04/: main  main.nim  sample.txt
rust/: Cargo.toml  add_day.sh  modify.sh
rust/src/day1/: day1.rs
rust/src/day2/: day2.rs
rust/src/day3/: day3.rs
rust/src/day4/: day4.rs
rust/src/day5/: day5.rs
rust/src/day6/: day6.rs
rust/src/day7/: day7.rs
rust/src/day8/: day8.rs
rust/src/day9/: day9.rs
