[package]
name = "aoc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "day1"
path = "src/day1/day1.rs"
args = ["src/day1/day1.txt"]

[[bin]]
name = "day2"
path = "src/day2/day2.rs"
args = ["src/day2/day2.txt"]

[[bin]]
name = "day3"
path = "src/day3/day3.rs"
args = ["src/day3/day3.txt"]

[[bin]]
name = "day4"
path = "src/day4/day4.rs"
args = ["src/day4/day4.txt"]

